--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
 			<artifactId>fastutil</artifactId>
 			<version>6.4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.7</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
