--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>se.ipx.ml</groupId>
 	<artifactId>decision-trees</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Decision Trees</name>
 	<description>Java implementations of various tree based learning algorithms</description>
 	<inceptionYear>2012</inceptionYear>
